--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run version:update && vite build && npm run postbuild",
+    "postbuild": "node scripts/update-version.mjs",
+    "version:update": "node scripts/update-version.mjs",
+    "preview": "vite preview",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "dependencies": {
     "react": "^19.2.0",
